--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
   margin: 30px 0 20px 210px;
 }
 .tile-3 {
-  width: 300px;
+  width: 290px;
   margin: 50px 0 0 40px;
   color: hsl(234, 12%, 34%);
   border-top: 4px solid hsl(34, 97%, 64%);
@@ -112,7 +112,7 @@ body {
 }
 
 .tile-4 {
-  width: 300px;
+  width: 290px;
   margin: 160px 0px 0 30px;
   color: hsl(234, 12%, 34%);
   border-top: 4px solid hsl(212, 86%, 64%);
@@ -139,4 +139,50 @@ body {
 .attribution {
   margin-top: 50px;
   text-align: center;
+}
+
+/*mobile*/
+
+@media screen and (max-width: 375px) {
+  .title-1 {
+    margin-top: 60px;
+    font-size: 1.6rem;
+    font-weight: lighter;
+    color: rgb(192, 190, 190);
+  }
+  .title-2 {
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+  .sub-title {
+    /* font-weight: 200; */
+    width: 330px;
+    text-align: center;
+    color: gray;
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 1rem;
+  }
+
+  .tile-1 {
+    margin: 70px 0 0 45px;
+  }
+
+  .tile-2 {
+    margin: 50px 0 0 45px;
+  }
+
+  .tile-3 {
+    margin: 50px 0 0 45px;
+  }
+
+  .tile-4 {
+    margin: 50px 0 0 45px;
+  }
+
+  .attribution {
+    width: 350px;
+    text-align: center;
+    margin: 40px 0 40px 17px;
+  }
 }
